--- a/staging/application.yaml
+++ b/staging/application.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: staging-app
+  name: staging-appsof-app
   namespace: argocd
 spec:
   project: apps-of-apps
   source:
     repoURL: https://github.com/jarin-ni/apps-of-apps
     targetRevision: main
-    path: staging/manifests
+    path: dev/manifests
   destination:
     server: https://kubernetes.default.svc
     namespace: staging
@@ -18,4 +18,3 @@ spec:
       selfHeal: true
     syncOptions:
     - CreateNamespace=true
-
