--- a/dev/application.yaml
+++ b/dev/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: dev-app
+  name: dev-appsof-app
   namespace: argocd
 spec:
   project: apps-of-apps
