--- a/root-app.yaml
+++ b/root-app.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/jarin-ni/apps-of-apps
     targetRevision: main
-    path: .
+    path: apps
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
